--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           About
         </label>
         <label for="page-4-r" class="nav-item">
-          Galeria
+          Galery
         </label>
       </nav>
     </header>
