--- a/index.html
+++ b/index.html
@@ -214,6 +214,14 @@
          </div>
       </div>
     </div>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145837787-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-145837787-1');
+    </script>
     <script src="assets/js/three.min.js"></script>
     <script src="assets/js/bg-planet.js"></script>
     <script src="assets/js/slider.js"></script>
