--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           About
         </label>
         <label for="page-4-r" class="nav-item">
-          Galery
+          Galeria
         </label>
       </nav>
     </header>
@@ -214,14 +214,6 @@
          </div>
       </div>
     </div>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145837787-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'UA-145837787-1');
-    </script>
     <script src="assets/js/three.min.js"></script>
     <script src="assets/js/bg-planet.js"></script>
     <script src="assets/js/slider.js"></script>
